# The-Evolution-of-Todo-Hackathon-2

In-Memory Python console app (phase 1)/: .gitignore  QWEN.md  README.md
In-Memory Python console app (phase 1)/.specify/memory/: constitution.md
In-Memory Python console app (phase 1)/history/prompts/003-time-aware-tasks/: 001-time-aware-tasks-specification.spec.prompt.md  002-time-aware-tasks-implementation-plan.plan.prompt.md  003-time-aware-tasks-breakdown.tasks.prompt.md  004-time-aware-tasks-implementation.green.prompt.md
In-Memory Python console app (phase 1)/history/prompts/constitution/: 1-create-todo-app-constitution.constitution.prompt.md
In-Memory Python console app (phase 1)/history/prompts/task-enhancements/: 2-task-enhancements-spec.spec.prompt.md  3-task-enhancements-plan.plan.prompt.md  (+2 more)
In-Memory Python console app (phase 1)/specs/001-todo-app-basic/: plan.md  spec.md  tasks.md
In-Memory Python console app (phase 1)/specs/002-task-enhancements/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
In-Memory Python console app (phase 1)/specs/003-time-aware-tasks/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
In-Memory Python console app (phase 1)/src/: README.md  __init__.py  main.py  models.py  pyproject.toml  requirements.txt  todo_manager.py
In-Memory Python console app (phase 1)/src/cli/: cli.py
In-Memory Python console app (phase 1)/src/models/: __init__.py  task.py
In-Memory Python console app (phase 1)/src/services/: date_utils.py  task_service.py  todo_service.py
(+9 files in other folders)
