[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app-time-aware"
version = "1.0.0"
description = "A time-aware and recurring task console application"
authors = [{name = "Todo App Developer"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["."]

[project.scripts]
todo-app = "main:main"